--- a/src/index.css
+++ b/src/index.css
@@ -121,13 +121,19 @@ body:has(.card[data-color="green"]:hover) {
 .block-container .btn-back-green {
   background: linear-gradient(135deg, #adfda2 -20%, #11d3f3 120%);
 }
+.block-container .btn-back-lightgreen {
+  background: linear-gradient(135deg, #a6ff17 -20%, #6efb7a 120%);
+}
 
 .block-container .btn-back-yellow {
   background: linear-gradient(135deg, #f7971e -20%, #ffd200 120%);
 }
 
 .block-container .btn-back-blue {
-  background: linear-gradient(135deg, #0061ff -20%, #60efff 120%);
+  background: linear-gradient(135deg, #9cbff7 -20%, #60efff 120%);
+}
+.block-container .btn-back-lightblue {
+  background: linear-gradient(135deg, #3985ff -20%, #b9bdff 120%);
 }
 
 .block-container .btn-back-orange {
@@ -135,7 +141,7 @@ body:has(.card[data-color="green"]:hover) {
 }
 
 .block-container .btn-back-pink {
-  background: linear-gradient(135deg, #e81cff -20%, #40c9ff 120%);
+  background: linear-gradient(135deg, #e81cff -20%, #4096ff 120%);
 }
 
 .block-container .btn-back-black {
